--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!doctype html>
 <html>
 	<head>
-		<title>Hello World</title>
+		<title>Hello</title>
 	</head>
 	<body>
-		<h1>Hello World</h1>
+		<h1>Hello Web Development</h1>
 	</body>
 </html>
